# test1

./: cv.txt  git_github.txt  py.py  на разбор
Every/HTML/: Style.css  index.html  index2.html  style2.css
Every/file/: data.csv  test.json
Every/functions /: build-in-functions.py
basics/: Razbor.py  comprehensions.py  data_types.py  dict_types.py  linux_commands.txt  list_types.py  logical_exp.py  loops.py  set_type.py  str_type.py  try_except.py
file/: file.py  json_.py  test1.txt
functions /: decorators.py  functions.py  scops.py
parsing/: main.py  pyproject.toml  requirements.txt
pip_venv/: pip_venv.txt  pyproject.toml
pips/pip_venv/: requirements.txt
pips/py_test/: pyproject.toml
py_test/src/: main.py
py_test/tests/: test_func.py
test/: calc.py  che.py  check.py  chekcing.py  df.py  l.py  prices.txt  py.py  rows_300.csv  task.py  task2.py  task3.txt  test.py  test1.py  test2.py  сheck4.py
